// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DigitalCashWallet renders correctly for non-organizers 1`] = `
<View
  style={
    {
      "flex": 1,
    }
  }
>
  <RNCSafeAreaProvider
    onInsetsChange={[Function]}
    style={
      [
        {
          "flex": 1,
        },
        undefined,
      ]
    }
  >
    <View
      style={
        [
          {
            "backgroundColor": "rgb(242, 242, 242)",
            "flex": 1,
          },
          undefined,
        ]
      }
    >
      <View
        collapsable={false}
        pointerEvents="box-none"
        style={
          {
            "zIndex": 1,
          }
        }
      >
        <View
          accessibilityElementsHidden={false}
          importantForAccessibility="auto"
          onLayout={[Function]}
          pointerEvents="box-none"
          style={null}
        >
          <View
            collapsable={false}
            pointerEvents="box-none"
            style={
              {
                "bottom": 0,
                "left": 0,
                "opacity": 1,
                "position": "absolute",
                "right": 0,
                "top": 0,
                "zIndex": 0,
              }
            }
          >
            <View
              collapsable={false}
              style={
                {
                  "backgroundColor": "rgb(255, 255, 255)",
                  "borderBottomColor": "rgb(216, 216, 216)",
                  "flex": 1,
                  "shadowColor": "rgb(216, 216, 216)",
                  "shadowOffset": {
                    "height": 0.5,
                    "width": 0,
                  },
                  "shadowOpacity": 0.85,
                  "shadowRadius": 0,
                }
              }
            />
          </View>
          <View
            collapsable={false}
            pointerEvents="box-none"
            style={
              {
                "height": 44,
                "maxHeight": undefined,
                "minHeight": undefined,
                "opacity": undefined,
                "transform": undefined,
              }
            }
          >
            <View
              pointerEvents="none"
              style={
                {
                  "height": 0,
                }
              }
            />
            <View
              pointerEvents="box-none"
              style={
                {
                  "alignItems": "stretch",
                  "flex": 1,
                  "flexDirection": "row",
                }
              }
            >
              <View
                collapsable={false}
                pointerEvents="box-none"
                style={
                  {
                    "alignItems": "flex-start",
                    "flexBasis": 0,
                    "flexGrow": 1,
                    "justifyContent": "center",
                    "marginStart": 0,
                    "opacity": 1,
                  }
                }
              />
              <View
                collapsable={false}
                pointerEvents="box-none"
                style={
                  {
                    "justifyContent": "center",
                    "marginHorizontal": 16,
                    "maxWidth": 718,
                    "opacity": 1,
                  }
                }
              >
                <Text
                  accessibilityRole="header"
                  aria-level="1"
                  collapsable={false}
                  numberOfLines={1}
                  onLayout={[Function]}
                  style={
                    {
                      "color": "rgb(28, 28, 30)",
                      "fontSize": 17,
                      "fontWeight": "600",
                    }
                  }
                >
                  MockScreen
                </Text>
              </View>
              <View
                collapsable={false}
                pointerEvents="box-none"
                style={
                  {
                    "alignItems": "flex-end",
                    "flexBasis": 0,
                    "flexGrow": 1,
                    "justifyContent": "center",
                    "marginEnd": 0,
                    "opacity": 1,
                  }
                }
              />
            </View>
          </View>
        </View>
      </View>
      <RNSScreenContainer
        onLayout={[Function]}
        style={
          {
            "flex": 1,
          }
        }
      >
        <RNSScreen
          activityState={2}
          collapsable={false}
          forwardedRef={[Function]}
          gestureResponseDistance={
            {
              "bottom": -1,
              "end": -1,
              "start": -1,
              "top": -1,
            }
          }
          pointerEvents="box-none"
          style={
            {
              "bottom": 0,
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            }
          }
        >
          <View
            collapsable={false}
            style={
              {
                "opacity": 1,
              }
            }
          />
          <View
            accessibilityElementsHidden={false}
            closing={false}
            gestureVelocityImpact={0.3}
            importantForAccessibility="auto"
            onClose={[Function]}
            onGestureBegin={[Function]}
            onGestureCanceled={[Function]}
            onGestureEnd={[Function]}
            onOpen={[Function]}
            onTransition={[Function]}
            pointerEvents="box-none"
            style={
              [
                {
                  "display": "flex",
                  "overflow": undefined,
                },
                {
                  "bottom": 0,
                  "left": 0,
                  "position": "absolute",
                  "right": 0,
                  "top": 0,
                },
              ]
            }
            transitionSpec={
              {
                "close": {
                  "animation": "spring",
                  "config": {
                    "damping": 500,
                    "mass": 3,
                    "overshootClamping": true,
                    "restDisplacementThreshold": 10,
                    "restSpeedThreshold": 10,
                    "stiffness": 1000,
                  },
                },
                "open": {
                  "animation": "spring",
                  "config": {
                    "damping": 500,
                    "mass": 3,
                    "overshootClamping": true,
                    "restDisplacementThreshold": 10,
                    "restSpeedThreshold": 10,
                    "stiffness": 1000,
                  },
                },
              }
            }
          >
            <View
              collapsable={false}
              pointerEvents="box-none"
              style={
                {
                  "flex": 1,
                }
              }
            >
              <View
                collapsable={false}
                forwardedRef={[Function]}
                handlerTag={3}
                handlerType="PanGestureHandler"
                needsOffscreenAlphaCompositing={false}
                onGestureHandlerEvent={[Function]}
                onGestureHandlerStateChange={[Function]}
                style={
                  {
                    "flex": 1,
                    "transform": [
                      {
                        "translateX": 0,
                      },
                      {
                        "translateX": 0,
                      },
                    ],
                  }
                }
              >
                <View
                  pointerEvents="box-none"
                  style={
                    [
                      {
                        "flex": 1,
                        "overflow": "hidden",
                      },
                      [
                        {
                          "backgroundColor": "rgb(242, 242, 242)",
                        },
                        undefined,
                      ],
                    ]
                  }
                >
                  <View
                    style={
                      {
                        "flex": 1,
                        "flexDirection": "column-reverse",
                      }
                    }
                  >
                    <View
                      style={
                        {
                          "flex": 1,
                        }
                      }
                    >
                      <View
                        style={
                          {
                            "flex": 1,
                          }
                        }
                      >
                        <RCTScrollView
                          collapsable={false}
                          handlerTag={4}
                          handlerType="NativeViewGestureHandler"
                          onGestureHandlerEvent={[Function]}
                          onGestureHandlerStateChange={[Function]}
                          style={
                            {
                              "padding": 16,
                            }
                          }
                          waitFor={
                            [
                              {
                                "current": null,
                              },
                            ]
                          }
                        >
                          <View>
                            <Text
                              style={
                                [
                                  {
                                    "color": "#000",
                                    "fontSize": 20,
                                    "lineHeight": 26,
                                    "marginBottom": 16,
                                    "textAlign": "left",
                                  },
                                  {
                                    "fontWeight": "bold",
                                  },
                                ]
                              }
                            >
                              Balance
                              : $
                              0
                            </Text>
                            <Text
                              style={
                                {
                                  "color": "#000",
                                  "fontSize": 20,
                                  "lineHeight": 26,
                                  "marginBottom": 16,
                                  "textAlign": "left",
                                }
                              }
                            >
                              Your balance for this lao is the sum of the balances of each roll call token you own in this lao. The distribution of your total balance is visible in the list below. To send cash from one of the accounts, simply tap on it.
                            </Text>
                            <View
                              style={
                                {
                                  "borderRadius": 8,
                                  "marginBottom": 16,
                                }
                              }
                            >
                              <View
                                accessible={true}
                                collapsable={false}
                                focusable={true}
                                onBlur={[Function]}
                                onClick={[Function]}
                                onFocus={[Function]}
                                onResponderGrant={[Function]}
                                onResponderMove={[Function]}
                                onResponderRelease={[Function]}
                                onResponderTerminate={[Function]}
                                onResponderTerminationRequest={[Function]}
                                onStartShouldSetResponder={[Function]}
                                style={
                                  [
                                    {
                                      "backgroundColor": "#fff",
                                    },
                                    {
                                      "borderTopLeftRadius": 8,
                                      "borderTopRightRadius": 8,
                                    },
                                    {
                                      "borderBottomLeftRadius": 8,
                                      "borderBottomRightRadius": 8,
                                    },
                                  ]
                                }
                              >
                                <View
                                  style={
                                    {
                                      "alignItems": "center",
                                      "backgroundColor": "#fff",
                                      "borderBottomLeftRadius": 8,
                                      "borderBottomRightRadius": 8,
                                      "borderBottomWidth": 0.5,
                                      "borderColor": "#bcbbc1",
                                      "borderTopLeftRadius": 8,
                                      "borderTopRightRadius": 8,
                                      "flexDirection": "row",
                                      "padding": 14,
                                    }
                                  }
                                  testID="RNE__LISTITEM__padView"
                                >
                                  <View
                                    style={
                                      [
                                        {
                                          "alignItems": "flex-start",
                                          "flex": 1,
                                          "justifyContent": "center",
                                        },
                                        undefined,
                                      ]
                                    }
                                    theme={
                                      {
                                        "colors": {
                                          "background": "#ffffff",
                                          "black": "#242424",
                                          "disabled": "hsl(208, 8%, 90%)",
                                          "divider": "#bcbbc1",
                                          "error": "#ff190c",
                                          "grey0": "#393e42",
                                          "grey1": "#43484d",
                                          "grey2": "#5e6977",
                                          "grey3": "#86939e",
                                          "grey4": "#bdc6cf",
                                          "grey5": "#e1e8ee",
                                          "greyOutline": "#bbb",
                                          "platform": {
                                            "android": {
                                              "error": "#f44336",
                                              "grey": "rgba(0, 0, 0, 0.54)",
                                              "primary": "#2196f3",
                                              "searchBg": "#dcdce1",
                                              "secondary": "#9C27B0",
                                              "success": "#4caf50",
                                              "warning": "#ffeb3b",
                                            },
                                            "default": {
                                              "error": "#ff3b30",
                                              "grey": "#7d7d7d",
                                              "primary": "#007aff",
                                              "searchBg": "#dcdce1",
                                              "secondary": "#5856d6",
                                              "success": "#4cd964",
                                              "warning": "#ffcc00",
                                            },
                                            "ios": {
                                              "error": "#ff3b30",
                                              "grey": "#7d7d7d",
                                              "primary": "#007aff",
                                              "searchBg": "#dcdce1",
                                              "secondary": "#5856d6",
                                              "success": "#4cd964",
                                              "warning": "#ffcc00",
                                            },
                                            "web": {
                                              "error": "#ff190c",
                                              "grey": "#393e42",
                                              "primary": "#2089dc",
                                              "searchBg": "#303337",
                                              "secondary": "#ca71eb",
                                              "success": "#52c41a",
                                              "warning": "#faad14",
                                            },
                                          },
                                          "primary": "#2089dc",
                                          "searchBg": "#303337",
                                          "secondary": "#ad1457",
                                          "success": "#52c41a",
                                          "warning": "#faad14",
                                          "white": "#ffffff",
                                        },
                                        "spacing": {
                                          "lg": 12,
                                          "md": 8,
                                          "sm": 4,
                                          "xl": 24,
                                          "xs": 2,
                                        },
                                      }
                                    }
                                  >
                                    <Text
                                      accessibilityRole="text"
                                      style={
                                        {
                                          "backgroundColor": "transparent",
                                          "color": "#000",
                                          "fontSize": 20,
                                          "lineHeight": 26,
                                          "textAlign": "left",
                                        }
                                      }
                                      testID="listItemTitle"
                                    >
                                      myRollCall
                                    </Text>
                                    <Text
                                      accessibilityRole="text"
                                      numberOfLines={1}
                                      style={
                                        {
                                          "backgroundColor": "transparent",
                                          "color": "#242424",
                                          "fontFamily": "Courier New",
                                          "fontSize": 16,
                                          "lineHeight": 20,
                                        }
                                      }
                                      testID="listItemTitle"
                                    >
                                      KqacT8b0vxJReSduzXQl6SV7ZZJqarY2yYdhGuYqP6c=
                                    </Text>
                                  </View>
                                  <View
                                    style={
                                      {
                                        "paddingLeft": 16,
                                      }
                                    }
                                  />
                                  <Text
                                    accessibilityRole="text"
                                    style={
                                      {
                                        "backgroundColor": "transparent",
                                        "color": "#000",
                                        "fontSize": 20,
                                        "lineHeight": 26,
                                        "textAlign": "left",
                                      }
                                    }
                                    testID="listItemTitle"
                                  >
                                    $
                                    0
                                  </Text>
                                  <View
                                    style={
                                      {
                                        "paddingLeft": 16,
                                      }
                                    }
                                  />
                                </View>
                              </View>
                            </View>
                            <View
                              style={
                                {
                                  "borderRadius": 8,
                                  "marginBottom": 16,
                                }
                              }
                            >
                              <View
                                accessible={true}
                                collapsable={false}
                                focusable={true}
                                onBlur={[Function]}
                                onClick={[Function]}
                                onFocus={[Function]}
                                onResponderGrant={[Function]}
                                onResponderMove={[Function]}
                                onResponderRelease={[Function]}
                                onResponderTerminate={[Function]}
                                onResponderTerminationRequest={[Function]}
                                onStartShouldSetResponder={[Function]}
                                style={
                                  {
                                    "backgroundColor": "rgb(242, 242, 242)",
                                    "paddingLeft": 0,
                                    "paddingRight": 0,
                                  }
                                }
                              >
                                <View
                                  style={
                                    {
                                      "alignItems": "center",
                                      "backgroundColor": "rgb(242, 242, 242)",
                                      "borderColor": "#bcbbc1",
                                      "flexDirection": "row",
                                      "padding": 14,
                                      "paddingLeft": 0,
                                      "paddingRight": 0,
                                    }
                                  }
                                  testID="RNE__LISTITEM__padView"
                                >
                                  <View
                                    style={
                                      [
                                        {
                                          "alignItems": "flex-start",
                                          "flex": 1,
                                          "justifyContent": "center",
                                        },
                                        undefined,
                                      ]
                                    }
                                    theme={
                                      {
                                        "colors": {
                                          "background": "#ffffff",
                                          "black": "#242424",
                                          "disabled": "hsl(208, 8%, 90%)",
                                          "divider": "#bcbbc1",
                                          "error": "#ff190c",
                                          "grey0": "#393e42",
                                          "grey1": "#43484d",
                                          "grey2": "#5e6977",
                                          "grey3": "#86939e",
                                          "grey4": "#bdc6cf",
                                          "grey5": "#e1e8ee",
                                          "greyOutline": "#bbb",
                                          "platform": {
                                            "android": {
                                              "error": "#f44336",
                                              "grey": "rgba(0, 0, 0, 0.54)",
                                              "primary": "#2196f3",
                                              "searchBg": "#dcdce1",
                                              "secondary": "#9C27B0",
                                              "success": "#4caf50",
                                              "warning": "#ffeb3b",
                                            },
                                            "default": {
                                              "error": "#ff3b30",
                                              "grey": "#7d7d7d",
                                              "primary": "#007aff",
                                              "searchBg": "#dcdce1",
                                              "secondary": "#5856d6",
                                              "success": "#4cd964",
                                              "warning": "#ffcc00",
                                            },
                                            "ios": {
                                              "error": "#ff3b30",
                                              "grey": "#7d7d7d",
                                              "primary": "#007aff",
                                              "searchBg": "#dcdce1",
                                              "secondary": "#5856d6",
                                              "success": "#4cd964",
                                              "warning": "#ffcc00",
                                            },
                                            "web": {
                                              "error": "#ff190c",
                                              "grey": "#393e42",
                                              "primary": "#2089dc",
                                              "searchBg": "#303337",
                                              "secondary": "#ca71eb",
                                              "success": "#52c41a",
                                              "warning": "#faad14",
                                            },
                                          },
                                          "primary": "#2089dc",
                                          "searchBg": "#303337",
                                          "secondary": "#ad1457",
                                          "success": "#52c41a",
                                          "warning": "#faad14",
                                          "white": "#ffffff",
                                        },
                                        "spacing": {
                                          "lg": 12,
                                          "md": 8,
                                          "sm": 4,
                                          "xl": 24,
                                          "xs": 2,
                                        },
                                      }
                                    }
                                  >
                                    <Text
                                      accessibilityRole="text"
                                      style={
                                        {
                                          "backgroundColor": "transparent",
                                          "color": "#000",
                                          "fontSize": 20,
                                          "fontWeight": "bold",
                                          "lineHeight": 26,
                                          "textAlign": "left",
                                        }
                                      }
                                      testID="listItemTitle"
                                    >
                                      Transaction History
                                    </Text>
                                  </View>
                                  <View
                                    style={
                                      {
                                        "paddingLeft": 16,
                                      }
                                    }
                                  />
                                  <View
                                    collapsable={false}
                                    style={
                                      {
                                        "transform": [
                                          {
                                            "rotate": "0deg",
                                          },
                                        ],
                                      }
                                    }
                                    testID="RNE__ListItem__Accordion__Icon"
                                  />
                                </View>
                              </View>
                            </View>
                            <Modal
                              hardwareAccelerated={false}
                              onRequestClose={[Function]}
                              transparent={true}
                              visible={false}
                            />
                          </View>
                        </RCTScrollView>
                      </View>
                    </View>
                  </View>
                </View>
              </View>
            </View>
          </View>
        </RNSScreen>
      </RNSScreenContainer>
    </View>
  </RNCSafeAreaProvider>
</View>
`;

exports[`DigitalCashWallet renders correctly for organizers 1`] = `
<View
  style={
    {
      "flex": 1,
    }
  }
>
  <RNCSafeAreaProvider
    onInsetsChange={[Function]}
    style={
      [
        {
          "flex": 1,
        },
        undefined,
      ]
    }
  >
    <View
      style={
        [
          {
            "backgroundColor": "rgb(242, 242, 242)",
            "flex": 1,
          },
          undefined,
        ]
      }
    >
      <View
        collapsable={false}
        pointerEvents="box-none"
        style={
          {
            "zIndex": 1,
          }
        }
      >
        <View
          accessibilityElementsHidden={false}
          importantForAccessibility="auto"
          onLayout={[Function]}
          pointerEvents="box-none"
          style={null}
        >
          <View
            collapsable={false}
            pointerEvents="box-none"
            style={
              {
                "bottom": 0,
                "left": 0,
                "opacity": 1,
                "position": "absolute",
                "right": 0,
                "top": 0,
                "zIndex": 0,
              }
            }
          >
            <View
              collapsable={false}
              style={
                {
                  "backgroundColor": "rgb(255, 255, 255)",
                  "borderBottomColor": "rgb(216, 216, 216)",
                  "flex": 1,
                  "shadowColor": "rgb(216, 216, 216)",
                  "shadowOffset": {
                    "height": 0.5,
                    "width": 0,
                  },
                  "shadowOpacity": 0.85,
                  "shadowRadius": 0,
                }
              }
            />
          </View>
          <View
            collapsable={false}
            pointerEvents="box-none"
            style={
              {
                "height": 44,
                "maxHeight": undefined,
                "minHeight": undefined,
                "opacity": undefined,
                "transform": undefined,
              }
            }
          >
            <View
              pointerEvents="none"
              style={
                {
                  "height": 0,
                }
              }
            />
            <View
              pointerEvents="box-none"
              style={
                {
                  "alignItems": "stretch",
                  "flex": 1,
                  "flexDirection": "row",
                }
              }
            >
              <View
                collapsable={false}
                pointerEvents="box-none"
                style={
                  {
                    "alignItems": "flex-start",
                    "flexBasis": 0,
                    "flexGrow": 1,
                    "justifyContent": "center",
                    "marginStart": 0,
                    "opacity": 1,
                  }
                }
              />
              <View
                collapsable={false}
                pointerEvents="box-none"
                style={
                  {
                    "justifyContent": "center",
                    "marginHorizontal": 16,
                    "maxWidth": 718,
                    "opacity": 1,
                  }
                }
              >
                <Text
                  accessibilityRole="header"
                  aria-level="1"
                  collapsable={false}
                  numberOfLines={1}
                  onLayout={[Function]}
                  style={
                    {
                      "color": "rgb(28, 28, 30)",
                      "fontSize": 17,
                      "fontWeight": "600",
                    }
                  }
                >
                  MockScreen
                </Text>
              </View>
              <View
                collapsable={false}
                pointerEvents="box-none"
                style={
                  {
                    "alignItems": "flex-end",
                    "flexBasis": 0,
                    "flexGrow": 1,
                    "justifyContent": "center",
                    "marginEnd": 0,
                    "opacity": 1,
                  }
                }
              />
            </View>
          </View>
        </View>
      </View>
      <RNSScreenContainer
        onLayout={[Function]}
        style={
          {
            "flex": 1,
          }
        }
      >
        <RNSScreen
          activityState={2}
          collapsable={false}
          forwardedRef={[Function]}
          gestureResponseDistance={
            {
              "bottom": -1,
              "end": -1,
              "start": -1,
              "top": -1,
            }
          }
          pointerEvents="box-none"
          style={
            {
              "bottom": 0,
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            }
          }
        >
          <View
            collapsable={false}
            style={
              {
                "opacity": 1,
              }
            }
          />
          <View
            accessibilityElementsHidden={false}
            closing={false}
            gestureVelocityImpact={0.3}
            importantForAccessibility="auto"
            onClose={[Function]}
            onGestureBegin={[Function]}
            onGestureCanceled={[Function]}
            onGestureEnd={[Function]}
            onOpen={[Function]}
            onTransition={[Function]}
            pointerEvents="box-none"
            style={
              [
                {
                  "display": "flex",
                  "overflow": undefined,
                },
                {
                  "bottom": 0,
                  "left": 0,
                  "position": "absolute",
                  "right": 0,
                  "top": 0,
                },
              ]
            }
            transitionSpec={
              {
                "close": {
                  "animation": "spring",
                  "config": {
                    "damping": 500,
                    "mass": 3,
                    "overshootClamping": true,
                    "restDisplacementThreshold": 10,
                    "restSpeedThreshold": 10,
                    "stiffness": 1000,
                  },
                },
                "open": {
                  "animation": "spring",
                  "config": {
                    "damping": 500,
                    "mass": 3,
                    "overshootClamping": true,
                    "restDisplacementThreshold": 10,
                    "restSpeedThreshold": 10,
                    "stiffness": 1000,
                  },
                },
              }
            }
          >
            <View
              collapsable={false}
              pointerEvents="box-none"
              style={
                {
                  "flex": 1,
                }
              }
            >
              <View
                collapsable={false}
                forwardedRef={[Function]}
                handlerTag={1}
                handlerType="PanGestureHandler"
                needsOffscreenAlphaCompositing={false}
                onGestureHandlerEvent={[Function]}
                onGestureHandlerStateChange={[Function]}
                style={
                  {
                    "flex": 1,
                    "transform": [
                      {
                        "translateX": 0,
                      },
                      {
                        "translateX": 0,
                      },
                    ],
                  }
                }
              >
                <View
                  pointerEvents="box-none"
                  style={
                    [
                      {
                        "flex": 1,
                        "overflow": "hidden",
                      },
                      [
                        {
                          "backgroundColor": "rgb(242, 242, 242)",
                        },
                        undefined,
                      ],
                    ]
                  }
                >
                  <View
                    style={
                      {
                        "flex": 1,
                        "flexDirection": "column-reverse",
                      }
                    }
                  >
                    <View
                      style={
                        {
                          "flex": 1,
                        }
                      }
                    >
                      <View
                        style={
                          {
                            "flex": 1,
                          }
                        }
                      >
                        <RCTScrollView
                          collapsable={false}
                          handlerTag={2}
                          handlerType="NativeViewGestureHandler"
                          onGestureHandlerEvent={[Function]}
                          onGestureHandlerStateChange={[Function]}
                          style={
                            {
                              "padding": 16,
                            }
                          }
                          waitFor={
                            [
                              {
                                "current": null,
                              },
                            ]
                          }
                        >
                          <View>
                            <Text
                              style={
                                [
                                  {
                                    "color": "#000",
                                    "fontSize": 20,
                                    "lineHeight": 26,
                                    "marginBottom": 16,
                                    "textAlign": "left",
                                  },
                                  {
                                    "fontWeight": "bold",
                                  },
                                ]
                              }
                            >
                              Balance
                              : $
                              0
                            </Text>
                            <Text
                              style={
                                {
                                  "color": "#000",
                                  "fontSize": 20,
                                  "lineHeight": 26,
                                  "marginBottom": 16,
                                  "textAlign": "left",
                                }
                              }
                            >
                              Your balance for this lao is the sum of the balances of each roll call token you own in this lao. The distribution of your total balance is visible in the list below. To send cash from one of the accounts, simply tap on it.
                            </Text>
                            <View
                              style={
                                {
                                  "borderRadius": 8,
                                  "marginBottom": 16,
                                }
                              }
                            >
                              <View
                                accessible={true}
                                collapsable={false}
                                focusable={true}
                                onBlur={[Function]}
                                onClick={[Function]}
                                onFocus={[Function]}
                                onResponderGrant={[Function]}
                                onResponderMove={[Function]}
                                onResponderRelease={[Function]}
                                onResponderTerminate={[Function]}
                                onResponderTerminationRequest={[Function]}
                                onStartShouldSetResponder={[Function]}
                                style={
                                  [
                                    {
                                      "backgroundColor": "#fff",
                                    },
                                    {
                                      "borderTopLeftRadius": 8,
                                      "borderTopRightRadius": 8,
                                    },
                                  ]
                                }
                              >
                                <View
                                  style={
                                    {
                                      "alignItems": "center",
                                      "backgroundColor": "#fff",
                                      "borderBottomWidth": 0.5,
                                      "borderColor": "#bcbbc1",
                                      "borderTopLeftRadius": 8,
                                      "borderTopRightRadius": 8,
                                      "flexDirection": "row",
                                      "padding": 14,
                                    }
                                  }
                                  testID="RNE__LISTITEM__padView"
                                >
                                  <View
                                    style={
                                      [
                                        {
                                          "alignItems": "flex-start",
                                          "flex": 1,
                                          "justifyContent": "center",
                                        },
                                        undefined,
                                      ]
                                    }
                                    theme={
                                      {
                                        "colors": {
                                          "background": "#ffffff",
                                          "black": "#242424",
                                          "disabled": "hsl(208, 8%, 90%)",
                                          "divider": "#bcbbc1",
                                          "error": "#ff190c",
                                          "grey0": "#393e42",
                                          "grey1": "#43484d",
                                          "grey2": "#5e6977",
                                          "grey3": "#86939e",
                                          "grey4": "#bdc6cf",
                                          "grey5": "#e1e8ee",
                                          "greyOutline": "#bbb",
                                          "platform": {
                                            "android": {
                                              "error": "#f44336",
                                              "grey": "rgba(0, 0, 0, 0.54)",
                                              "primary": "#2196f3",
                                              "searchBg": "#dcdce1",
                                              "secondary": "#9C27B0",
                                              "success": "#4caf50",
                                              "warning": "#ffeb3b",
                                            },
                                            "default": {
                                              "error": "#ff3b30",
                                              "grey": "#7d7d7d",
                                              "primary": "#007aff",
                                              "searchBg": "#dcdce1",
                                              "secondary": "#5856d6",
                                              "success": "#4cd964",
                                              "warning": "#ffcc00",
                                            },
                                            "ios": {
                                              "error": "#ff3b30",
                                              "grey": "#7d7d7d",
                                              "primary": "#007aff",
                                              "searchBg": "#dcdce1",
                                              "secondary": "#5856d6",
                                              "success": "#4cd964",
                                              "warning": "#ffcc00",
                                            },
                                            "web": {
                                              "error": "#ff190c",
                                              "grey": "#393e42",
                                              "primary": "#2089dc",
                                              "searchBg": "#303337",
                                              "secondary": "#ca71eb",
                                              "success": "#52c41a",
                                              "warning": "#faad14",
                                            },
                                          },
                                          "primary": "#2089dc",
                                          "searchBg": "#303337",
                                          "secondary": "#ad1457",
                                          "success": "#52c41a",
                                          "warning": "#faad14",
                                          "white": "#ffffff",
                                        },
                                        "spacing": {
                                          "lg": 12,
                                          "md": 8,
                                          "sm": 4,
                                          "xl": 24,
                                          "xs": 2,
                                        },
                                      }
                                    }
                                  >
                                    <Text
                                      accessibilityRole="text"
                                      style={
                                        {
                                          "backgroundColor": "transparent",
                                          "color": "#000",
                                          "fontSize": 20,
                                          "lineHeight": 26,
                                          "textAlign": "left",
                                        }
                                      }
                                      testID="listItemTitle"
                                    >
                                      Coin Issuance
                                    </Text>
                                    <Text
                                      accessibilityRole="text"
                                      style={
                                        {
                                          "backgroundColor": "transparent",
                                          "color": "#242424",
                                          "fontSize": 16,
                                          "lineHeight": 20,
                                        }
                                      }
                                      testID="listItemTitle"
                                    >
                                      You as the organizer can create money out of thin air 🧙‍♂️
                                    </Text>
                                  </View>
                                  <View
                                    style={
                                      {
                                        "paddingLeft": 16,
                                      }
                                    }
                                  />
                                  <Text
                                    accessibilityRole="text"
                                    style={
                                      {
                                        "backgroundColor": "transparent",
                                        "color": "#000",
                                        "fontSize": 20,
                                        "lineHeight": 26,
                                        "textAlign": "left",
                                      }
                                    }
                                    testID="listItemTitle"
                                  >
                                    ∞
                                  </Text>
                                  <View
                                    style={
                                      {
                                        "paddingLeft": 16,
                                      }
                                    }
                                  />
                                </View>
                              </View>
                              <View
                                accessible={true}
                                collapsable={false}
                                focusable={true}
                                onBlur={[Function]}
                                onClick={[Function]}
                                onFocus={[Function]}
                                onResponderGrant={[Function]}
                                onResponderMove={[Function]}
                                onResponderRelease={[Function]}
                                onResponderTerminate={[Function]}
                                onResponderTerminationRequest={[Function]}
                                onStartShouldSetResponder={[Function]}
                                style={
                                  [
                                    {
                                      "backgroundColor": "#fff",
                                    },
                                    {
                                      "borderBottomLeftRadius": 8,
                                      "borderBottomRightRadius": 8,
                                    },
                                  ]
                                }
                              >
                                <View
                                  style={
                                    {
                                      "alignItems": "center",
                                      "backgroundColor": "#fff",
                                      "borderBottomLeftRadius": 8,
                                      "borderBottomRightRadius": 8,
                                      "borderBottomWidth": 0.5,
                                      "borderColor": "#bcbbc1",
                                      "flexDirection": "row",
                                      "padding": 14,
                                    }
                                  }
                                  testID="RNE__LISTITEM__padView"
                                >
                                  <View
                                    style={
                                      [
                                        {
                                          "alignItems": "flex-start",
                                          "flex": 1,
                                          "justifyContent": "center",
                                        },
                                        undefined,
                                      ]
                                    }
                                    theme={
                                      {
                                        "colors": {
                                          "background": "#ffffff",
                                          "black": "#242424",
                                          "disabled": "hsl(208, 8%, 90%)",
                                          "divider": "#bcbbc1",
                                          "error": "#ff190c",
                                          "grey0": "#393e42",
                                          "grey1": "#43484d",
                                          "grey2": "#5e6977",
                                          "grey3": "#86939e",
                                          "grey4": "#bdc6cf",
                                          "grey5": "#e1e8ee",
                                          "greyOutline": "#bbb",
                                          "platform": {
                                            "android": {
                                              "error": "#f44336",
                                              "grey": "rgba(0, 0, 0, 0.54)",
                                              "primary": "#2196f3",
                                              "searchBg": "#dcdce1",
                                              "secondary": "#9C27B0",
                                              "success": "#4caf50",
                                              "warning": "#ffeb3b",
                                            },
                                            "default": {
                                              "error": "#ff3b30",
                                              "grey": "#7d7d7d",
                                              "primary": "#007aff",
                                              "searchBg": "#dcdce1",
                                              "secondary": "#5856d6",
                                              "success": "#4cd964",
                                              "warning": "#ffcc00",
                                            },
                                            "ios": {
                                              "error": "#ff3b30",
                                              "grey": "#7d7d7d",
                                              "primary": "#007aff",
                                              "searchBg": "#dcdce1",
                                              "secondary": "#5856d6",
                                              "success": "#4cd964",
                                              "warning": "#ffcc00",
                                            },
                                            "web": {
                                              "error": "#ff190c",
                                              "grey": "#393e42",
                                              "primary": "#2089dc",
                                              "searchBg": "#303337",
                                              "secondary": "#ca71eb",
                                              "success": "#52c41a",
                                              "warning": "#faad14",
                                            },
                                          },
                                          "primary": "#2089dc",
                                          "searchBg": "#303337",
                                          "secondary": "#ad1457",
                                          "success": "#52c41a",
                                          "warning": "#faad14",
                                          "white": "#ffffff",
                                        },
                                        "spacing": {
                                          "lg": 12,
                                          "md": 8,
                                          "sm": 4,
                                          "xl": 24,
                                          "xs": 2,
                                        },
                                      }
                                    }
                                  >
                                    <Text
                                      accessibilityRole="text"
                                      style={
                                        {
                                          "backgroundColor": "transparent",
                                          "color": "#000",
                                          "fontSize": 20,
                                          "lineHeight": 26,
                                          "textAlign": "left",
                                        }
                                      }
                                      testID="listItemTitle"
                                    >
                                      myRollCall
                                    </Text>
                                    <Text
                                      accessibilityRole="text"
                                      numberOfLines={1}
                                      style={
                                        {
                                          "backgroundColor": "transparent",
                                          "color": "#242424",
                                          "fontFamily": "Courier New",
                                          "fontSize": 16,
                                          "lineHeight": 20,
                                        }
                                      }
                                      testID="listItemTitle"
                                    >
                                      KqacT8b0vxJReSduzXQl6SV7ZZJqarY2yYdhGuYqP6c=
                                    </Text>
                                  </View>
                                  <View
                                    style={
                                      {
                                        "paddingLeft": 16,
                                      }
                                    }
                                  />
                                  <Text
                                    accessibilityRole="text"
                                    style={
                                      {
                                        "backgroundColor": "transparent",
                                        "color": "#000",
                                        "fontSize": 20,
                                        "lineHeight": 26,
                                        "textAlign": "left",
                                      }
                                    }
                                    testID="listItemTitle"
                                  >
                                    $
                                    0
                                  </Text>
                                  <View
                                    style={
                                      {
                                        "paddingLeft": 16,
                                      }
                                    }
                                  />
                                </View>
                              </View>
                            </View>
                            <View
                              style={
                                {
                                  "borderRadius": 8,
                                  "marginBottom": 16,
                                }
                              }
                            >
                              <View
                                accessible={true}
                                collapsable={false}
                                focusable={true}
                                onBlur={[Function]}
                                onClick={[Function]}
                                onFocus={[Function]}
                                onResponderGrant={[Function]}
                                onResponderMove={[Function]}
                                onResponderRelease={[Function]}
                                onResponderTerminate={[Function]}
                                onResponderTerminationRequest={[Function]}
                                onStartShouldSetResponder={[Function]}
                                style={
                                  {
                                    "backgroundColor": "rgb(242, 242, 242)",
                                    "paddingLeft": 0,
                                    "paddingRight": 0,
                                  }
                                }
                              >
                                <View
                                  style={
                                    {
                                      "alignItems": "center",
                                      "backgroundColor": "rgb(242, 242, 242)",
                                      "borderColor": "#bcbbc1",
                                      "flexDirection": "row",
                                      "padding": 14,
                                      "paddingLeft": 0,
                                      "paddingRight": 0,
                                    }
                                  }
                                  testID="RNE__LISTITEM__padView"
                                >
                                  <View
                                    style={
                                      [
                                        {
                                          "alignItems": "flex-start",
                                          "flex": 1,
                                          "justifyContent": "center",
                                        },
                                        undefined,
                                      ]
                                    }
                                    theme={
                                      {
                                        "colors": {
                                          "background": "#ffffff",
                                          "black": "#242424",
                                          "disabled": "hsl(208, 8%, 90%)",
                                          "divider": "#bcbbc1",
                                          "error": "#ff190c",
                                          "grey0": "#393e42",
                                          "grey1": "#43484d",
                                          "grey2": "#5e6977",
                                          "grey3": "#86939e",
                                          "grey4": "#bdc6cf",
                                          "grey5": "#e1e8ee",
                                          "greyOutline": "#bbb",
                                          "platform": {
                                            "android": {
                                              "error": "#f44336",
                                              "grey": "rgba(0, 0, 0, 0.54)",
                                              "primary": "#2196f3",
                                              "searchBg": "#dcdce1",
                                              "secondary": "#9C27B0",
                                              "success": "#4caf50",
                                              "warning": "#ffeb3b",
                                            },
                                            "default": {
                                              "error": "#ff3b30",
                                              "grey": "#7d7d7d",
                                              "primary": "#007aff",
                                              "searchBg": "#dcdce1",
                                              "secondary": "#5856d6",
                                              "success": "#4cd964",
                                              "warning": "#ffcc00",
                                            },
                                            "ios": {
                                              "error": "#ff3b30",
                                              "grey": "#7d7d7d",
                                              "primary": "#007aff",
                                              "searchBg": "#dcdce1",
                                              "secondary": "#5856d6",
                                              "success": "#4cd964",
                                              "warning": "#ffcc00",
                                            },
                                            "web": {
                                              "error": "#ff190c",
                                              "grey": "#393e42",
                                              "primary": "#2089dc",
                                              "searchBg": "#303337",
                                              "secondary": "#ca71eb",
                                              "success": "#52c41a",
                                              "warning": "#faad14",
                                            },
                                          },
                                          "primary": "#2089dc",
                                          "searchBg": "#303337",
                                          "secondary": "#ad1457",
                                          "success": "#52c41a",
                                          "warning": "#faad14",
                                          "white": "#ffffff",
                                        },
                                        "spacing": {
                                          "lg": 12,
                                          "md": 8,
                                          "sm": 4,
                                          "xl": 24,
                                          "xs": 2,
                                        },
                                      }
                                    }
                                  >
                                    <Text
                                      accessibilityRole="text"
                                      style={
                                        {
                                          "backgroundColor": "transparent",
                                          "color": "#000",
                                          "fontSize": 20,
                                          "fontWeight": "bold",
                                          "lineHeight": 26,
                                          "textAlign": "left",
                                        }
                                      }
                                      testID="listItemTitle"
                                    >
                                      Transaction History
                                    </Text>
                                  </View>
                                  <View
                                    style={
                                      {
                                        "paddingLeft": 16,
                                      }
                                    }
                                  />
                                  <View
                                    collapsable={false}
                                    style={
                                      {
                                        "transform": [
                                          {
                                            "rotate": "0deg",
                                          },
                                        ],
                                      }
                                    }
                                    testID="RNE__ListItem__Accordion__Icon"
                                  />
                                </View>
                              </View>
                            </View>
                            <Modal
                              hardwareAccelerated={false}
                              onRequestClose={[Function]}
                              transparent={true}
                              visible={false}
                            />
                          </View>
                        </RCTScrollView>
                      </View>
                    </View>
                  </View>
                </View>
              </View>
            </View>
          </View>
        </RNSScreen>
      </RNSScreenContainer>
    </View>
  </RNCSafeAreaProvider>
</View>
`;
